# noria_codex

./: .gitignore  README.md  docker-compose.postgres.yml  package.json  pnpm-lock.yaml  turbo.json
.bmad-core/: install-manifest.yaml
.ignore/: NORIA_PRD.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: dependencies.py
apps/api/app/api/v1/auth/: routes.py
apps/api/app/core/: config.py  database.py  logging.py  security.py
apps/api/app/models/: __init__.py  analysis.py  base.py  conversation.py  user.py
apps/api/app/repositories/: __init__.py  analysis.py  base.py  conversation.py  user.py
apps/api/app/schemas/: __init__.py  user.py
apps/api/app/services/: __init__.py  analysis_service.py  conversation_service.py  exceptions.py  user_service.py
apps/api/app/utils/: rate_limiter.py
apps/api/migrations/: alembic.ini  env.py
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/tests/: conftest.py
apps/api/tests/api/auth/: test_signup.py
apps/api/tests/repositories/: test_analysis_repository.py  test_conversation_repository.py  test_user_repository.py
apps/web/: .eslintrc.js  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: architecture.md  prd.md
docs/NORIA_FULLSTACK_ARCHITECTURE/: backend-architecture.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  developer-onboarding.md  development-workflow.md  error-handling-strategy.md  external-apis.md  (+11 more)
infrastructure/: README.md
(+21 files in other folders)
